# ilias-grader

./: Cargo.toml  README.md  flake.nix
src/: cli.rs  download.rs  feedback.rs  main.rs
