[package]
name = "ilias-grader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
dialoguer = "0.11.0"
ilias = { path = "../ilias-rs" }
keyring = { version = "3.6.0", features = ["apple-native", "linux-native", "windows-native"] }
reqwest = "0.12.8"
tempfile = "3.13.0"
zip = "2.2.0"
